--- a/LoginRegistrationForm/App.config
+++ b/LoginRegistrationForm/App.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="LoginRegistrationForm.Properties.Settings.Quan_Li_Thu_ChiConnectionString"
+            connectionString="Data Source=DAI\MYSQLSERVER;Initial Catalog=Quan_Li_Thu_Chi;Persist Security Info=True;User ID=sa;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="LoginRegistrationForm.Properties.Settings.Quan_Li_Thu_ChiConnectionString1"
+            connectionString="Data Source=.;Initial Catalog=Quan_Li_Thu_Chi;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
