--- a/LoginRegistrationForm/LoginRegistrationForm.csproj
+++ b/LoginRegistrationForm/LoginRegistrationForm.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,6 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataClassesDB.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataClassesDB.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,12 @@
     </Compile>
     <Compile Include="Forms\FormTaiKhoan.Designer.cs">
       <DependentUpon>FormTaiKhoan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormTaoViTien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormTaoViTien.Designer.cs">
+      <DependentUpon>FormTaoViTien.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormThemDanhMuc.cs">
       <SubType>Form</SubType>
@@ -91,6 +103,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session.cs" />
     <Compile Include="Signup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormTaiKhoan.resx">
       <DependentUpon>FormTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormTaoViTien.resx">
+      <DependentUpon>FormTaoViTien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormThemDanhMuc.resx">
       <DependentUpon>FormThemDanhMuc.cs</DependentUpon>
@@ -131,6 +147,14 @@
     <EmbeddedResource Include="Signup.resx">
       <DependentUpon>Signup.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="DataClassesDB.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>DataClassesDB.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DataClassesDB.dbml.layout">
+      <DependentUpon>DataClassesDB.dbml</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -146,8 +170,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Asset\icons8_user_male_circle_104px_2.png" />
-    <Content Include="CSDL.sql" />
-    <None Include="Resources\Hat-Kho.jpg" />
+    <None Include="Resources\219983.png" />
+    <None Include="Resources\close-x-svgrepo-com.png" />
+    <None Include="Resources\close-button.png" />
+    <None Include="Resources\cash-management-systems.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
