--- a/LoginRegistrationForm/App.config
+++ b/LoginRegistrationForm/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="LoginRegistrationForm.Properties.Settings.Quan_Li_Thu_ChiConnectionString"
-            connectionString="Data Source=DAI\MYSQLSERVER;Initial Catalog=Quan_Li_Thu_Chi;Persist Security Info=True;User ID=sa;TrustServerCertificate=True"
+            connectionString="Data Source=.;Initial Catalog=Quan_Li_Thu_Chi;Integrated Security=True;Trust Server Certificate=True"
             providerName="System.Data.SqlClient" />
         <add name="LoginRegistrationForm.Properties.Settings.Quan_Li_Thu_ChiConnectionString1"
             connectionString="Data Source=.;Initial Catalog=Quan_Li_Thu_Chi;Integrated Security=True;TrustServerCertificate=True"
