--- a/LoginRegistrationForm/LoginRegistrationForm.csproj
+++ b/LoginRegistrationForm/LoginRegistrationForm.csproj
@@ -71,12 +71,6 @@
     <Compile Include="Forms\FormTaiKhoan.Designer.cs">
       <DependentUpon>FormTaiKhoan.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormTaoViTien.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\FormTaoViTien.Designer.cs">
-      <DependentUpon>FormTaoViTien.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\FormThemDanhMuc.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,9 +112,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormTaiKhoan.resx">
       <DependentUpon>FormTaiKhoan.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormTaoViTien.resx">
-      <DependentUpon>FormTaoViTien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormThemDanhMuc.resx">
       <DependentUpon>FormThemDanhMuc.cs</DependentUpon>
@@ -170,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Asset\icons8_user_male_circle_104px_2.png" />
+    <None Include="Resources\ChatGPT Image 09_11_37 7 thg 6, 2025.png" />
     <None Include="Resources\219983.png" />
     <None Include="Resources\close-x-svgrepo-com.png" />
     <None Include="Resources\close-button.png" />
